demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  #namespace: master
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
