demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: demo-app
  name: demo-app
  #namespace: master
spec:
  rules:
  - host: duy.com
    http:
      paths:
      - backend:
          service:
            name: demo-app-svc
            port: 
              number: 8888
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - duy.com
    secretName: demo-app-tls
